<?xml version="1.0"?>
<package>
  <name>optoforce_can</name>
  <version>0.0.0</version>
  <description>The Optoforce sensors with CAN interface package</description>

  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>
  <license>BSD</license>

  <author>Dawid Seredynski</author>

  <url>http://ros.org/wiki/barrett_hand_controller</url>
  
  <buildtool_depend>catkin</buildtool_depend>

<!--  <build_depend>genmsg</build_depend>-->
  <build_depend>roscpp</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>can_driver</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>can_driver</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
